fix content cut off on ourlink page

--- a/src/styles/our-link.css
+++ b/src/styles/our-link.css
@@ -2,13 +2,14 @@
   max-width: 500px;
   padding: 40px;
   margin: auto;
-  height: 100vh;
+  height: fit-content;
   box-sizing: border-box;
   display: flex;
   justify-content: flex-start;
   align-items: center;
   flex-direction: column;
   border-radius: 8px;
+  box-sizing: border-box;
 }
 
 .our-link-wrapper .our-brand .img-wrapper {
